FALCON-133: Falcon 0.4.8 and oozie trunk: Error upon killing process instance